Day three initial commit

--- a/Day_Two.html
+++ b/Day_Two.html
@@ -23,15 +23,15 @@
         Topic 1:Semantic HTML
     </h2>
     <p>in semantic html Today i'd learned about</p>
-    <ol type='I'>
-    <li>header</li>
-    <li>footer,</li>
-    <li> article</li>
-    <li>section</li>
-    <li>aside</li>
-    <li>main</li>
-    <a href="https://www.w3schools.com/tags/"> form W3 school</a>
-   </ol>
+    <ol>
+        <li>header</li>
+        <li>footer,</li>
+        <li> article</li>
+        <li>section</li>
+        <li>aside</li>
+        <li>main</li>
+    </ol>
+    form<a href="https://www.w3schools.com/tags/">  W3 school</a>
 
    <h2>Topic 2: HTML Tables</h2>
 <table border="2">
@@ -101,26 +101,5 @@ Create a table for student grades.
         <input type="message" placeholder="Give us your feedback"> <br><br>
         <button>Submit</button>
     </form>
-
-<!--
-
-
-
-What to Learn:
-Understand form elements: <form>, <input>, <textarea>, <button>, <label>, <fieldset>.
-Learn about attributes: method, action, placeholder, required, type.
-Learning Material:
-W3Schools: HTML Forms
-MDN Web Docs: Forms
-Estimated Time: 2 hours
-Practice:
-Build a simple contact form with input fields for name, email, and message.
-Review & Project Work
-Review: Revise Day 1 topics for 30 minutes.
-Project: Update your previous project by adding semantic HTML elements, a table, and a contact form.
-Time: 1 hour
-Total Time Required: 6 hours
-        -->
-
 </body>
 </html>
