website link added

--- a/Day_One_Practice.html
+++ b/Day_One_Practice.html
@@ -19,10 +19,8 @@
             <li>Journal writing</li>
             <li>Eating</li>
         </ul>
-        <p>
-            <a href="S" target="_blank">Visit my favorite website</a>
-        </p>
-    </section>
+            <a href="https://github.com/MSabbirHossen" target="_blank" aria-label="Visit Sabbir's GitHub Profile">Visit my favorite website</a>           
+        </section>
     <footer>
         <p>Thank you for checking out my practice code!</p>
     </footer>
