--- a/index.html
+++ b/index.html
@@ -52,11 +52,11 @@
     />
     <br />
 
-    <a href="https://youtu.be/Xic3zBM-P0g?si=b5GGs6MSzudRu0Ve"
+    <a href="https://youtu.be/Xic3zBM-P0g?si=b5GGs6MSzudRu0Ve" target="_blank"
       >Humne Aankhon Se Dekha Nahin Hai Mgar || Mazharul Islam</a
     >
     <br />
-    <a href="https://youtu.be/R7Qsn6TZU14?si=i8xMFsv7GDdYWxXu"
+    <a href="https://youtu.be/R7Qsn6TZU14?si=i8xMFsv7GDdYWxXu" target="_blank"
       >ঐ চাঁদের আলো আজ লাগেনা ভালো | Oi Chander Alo | মুবিনুর রহমান সোহান
     </a>
   </body>
