--- a/index.html
+++ b/index.html
@@ -5,11 +5,60 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Travel Blog</title>
+
+    <style>
+      .embeded {
+        font-family: "Courier New", Courier, monospace;
+      }
+    </style>
+    <link rel="stylesheet" href="styles.css" />
   </head>
 
   <!-- This is Body section -->
   <body>
     <h1><i>My Travel Blog</i></h1>
+    <div class="para">
+      <p style="border: 2px solid black">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore
+        cumque iste amet, eaque porro accusamus pariatur numquam vero. Labore
+        adipisci accusamus iste, velit eos repellendus cum possimus neque quae
+        unde quisquam repudiandae magni sed et est doloribus rerum fugit sint
+        sequi hic similique architecto nihil in. Iure, praesentium. Illo,
+        excepturi beatae perspiciatis accusantium sed ipsa qui tenetur est magni
+        placeat a asperiores minima corporis laboriosam reiciendis vero fuga
+        facere suscipit cupiditate ut harum dolores blanditiis nulla voluptate.
+        Perferendis perspiciatis officia officiis, aut ullam necessitatibus
+        nihil molestias praesentium consequatur veniam optio nisi, modi
+        provident incidunt, ducimus quasi totam earum excepturi voluptate?
+      </p>
+      <p class="embeded">
+        Voluptatum suscipit iusto dolore quod, totam ipsum, sit cumque, earum
+        beatae esse voluptas at nihil. Enim nostrum nulla temporibus odio
+        assumenda, numquam suscipit. Labore harum iure voluptatum facilis veniam
+        dolor itaque corrupti. Temporibus necessitatibus ex accusantium voluptas
+        dolor eius cupiditate error soluta fuga aspernatur eos quam rerum,
+        provident saepe quod officiis sint natus magni delectus nesciunt,
+        officia quas debitis aliquam. Porro saepe error cum facere laboriosam
+        quod! Nemo, harum. Rerum, quae impedit ab fugit veritatis facilis ullam,
+        pariatur, hic delectus nemo recusandae! Ratione nisi earum vero aut eius
+        eaque dolor repellendus itaque adipisci quibusdam, nam deserunt sit illo
+        animi cum.
+      </p>
+      <p class="extarnal">
+        Quae impedit eligendi explicabo, itaque quisquam excepturi repellat
+        natus? Totam magni commodi omnis praesentium. Et corporis iure
+        perspiciatis est reprehenderit numquam similique laboriosam facilis
+        voluptatem autem quos assumenda qui placeat expedita, quis ipsum
+        tempora! Animi mollitia repellat officiis saepe, beatae rerum et magni,
+        quo obcaecati veritatis accusantium magnam. Quidem voluptas earum eius,
+        excepturi, exercitationem optio aspernatur consequuntur at esse
+        cupiditate culpa minima id iste voluptatibus officiis cum sequi nostrum
+        doloribus, quis cumque atque impedit quaerat! Perferendis dignissimos
+        minus cumque nihil ab nobis vitae asperiores beatae est ea. Tempore, eum
+        dolor quibusdam soluta at aliquid ullam blanditiis quae cupiditate!
+        Provident, quia!
+      </p>
+    </div>
     <div>
       <p>
         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nam ratione
