--- a/similar webpage.html
+++ b/similar webpage.html
@@ -12,9 +12,12 @@
     </header>
     <hr />
     <main>
-      <label for="search"> Search Your Image here</label>
-      <input type="search" name="search" id="search" />
-      <button>Search</button>
+      <div class="search-bar">
+        <label for="search"> Search Your Image here</label>
+        <input type="search" name="search" id="search" />
+        <button>Search</button>
+      </div>
+
       <img
         src="https://images.unsplash.com/photo-1647899010669-824d2194c47f?q=80&w=1170&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
         alt="A panda sitting in a bathtub"
@@ -25,14 +28,14 @@
       >
       <hr />
       <h4>Feedback Form</h4>
-      <form class="Feedback">
+      <form class="feedback">
         <label for="name">Name</label>
         <input type="text" name="name" id="name" placeholder="Your Name" />
         <label for="date">Date</label>
         <input type="date" name="date" id="date" />
         <label for="comment">Comment</label>
         <textarea name="Comment" id="comment" cols="30" rows="10"></textarea>
-        <input type="submit" value="Sunmit" />
+        <button>Submit</button>
       </form>
     </main>
     <footer></footer>
