--- a/form.html
+++ b/form.html
@@ -8,39 +8,42 @@
   </head>
   <body>
     <h1>Feedback Form for Storytelling Contest</h1>
-<fieldset>
-    <legend>Personal Information</legend>
     <form action="">
-      <label for="name">Writer:</label>
-      <input type="text" name="name" id="name" placeholder="Your name Here" />
-      <br /> <br>
-      <label for="email">Email:</label>
-      <input
-        type="email"
-        name="email"
-        id="email"
-        placeholder="Your Email Here"
-      />
+      <fieldset>
+        <legend>Personal Information</legend>
+
+        <label for="name">Writer:</label>
+        <input type="text" name="name" id="name" placeholder="Your name Here" />
+        <br />
+        <br />
+        <label for="email">Email:</label>
+        <input
+          type="email"
+          name="email"
+          id="email"
+          placeholder="Your Email Here"
+        />
       </fieldset>
       <br />
       <fieldset>
         <legend>Feedback</legend>
-      <label for="text">Massage</label>
-      <textarea
-        name="Story"
-        id="text"
-        cols="30"
-        rows="10"
-        placeholder="Feel Free to write your feedback"
-      ></textarea
-      ><br />
-      <label for="rate">Rate the story</label>
-      <select name="rate" id="rate">
-        <option value="Good">Good</option>
-        <option value="Amazing">Amazing</option>
-        <option value="Excellent">Excellent</option>
-      </select>
-    </fieldset>
+        <label for="text">Message</label>
+        <textarea
+          name="Story"
+          id="text"
+          cols="30"
+          rows="10"
+          placeholder="Feel Free to write your feedback"
+        ></textarea
+        ><br />
+        <label for="rate">Rate the story</label>
+        <select name="rate" id="rate">
+          <option value="Good">Good</option>
+          <option value="Amazing">Amazing</option>
+          <option value="Excellent">Excellent</option>
+        </select>
+      </fieldset>
+      <input type="submit" value="Submit" />
     </form>
   </body>
 </html>
