--- a/similar_webpage.html
+++ b/similar_webpage.html
@@ -38,6 +38,6 @@
         <button>Submit</button>
       </form>
     </main>
-    <footer></footer>
+    <footer>Created by MS_Hossen</footer>
   </body>
 </html>
